# membrane

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  memory-knowledge.md  part-a-analyze.md  profiling.md
membrane/: __init__.py  cli.py
membrane/analyze/: orchestrator.py  scratchpad.py
membrane/catalog/: composer.py  loader.py  taxonomy.yaml
membrane/catalog/patterns/: a_mem.yaml  graphiti.yaml  langmem_sdk.yaml  letta_stateful.yaml  magma_multigraph.yaml  mem0_universal.yaml  memverse.yaml  vector_rag.yaml
membrane/catalog/recipes/: cybersecurity_soc_stack.yaml
membrane/knowledge/: client.py  comparison.py  tools.py
membrane/knowledge/configs/: inputs.py  sources.py
membrane/knowledge/extract/: extractor.py  schema.py
membrane/knowledge/flows/: batch_ingest.py  paper_flow.py
membrane/knowledge/index/: embedder.py  store.py
membrane/knowledge/models/: extraction.py  knowledge.py  provenance.py
membrane/knowledge/preprocess/: raw.py
membrane/knowledge/preprocess/fetch/: arxiv.py  github.py  http.py
membrane/knowledge/preprocess/format/: html.py  markdown.py  pdf.py
membrane/knowledge/review/: queue.py
membrane/knowledge/storage/: layout.py
membrane/knowledge/sync/: awesome_parser.py
membrane/schemas/: __init__.py  hybrid.py  manifest.py  profile.py  recommendation.py
tests/analyze/: test_orchestrator.py
tests/catalog/: test_composer.py
tests/knowledge/: test_awesome_parser.py  test_catalog.py  test_paper_flow.py  test_sources.py
