[project]
name = "membrane"
version = "0.1.0"
description = "Profile your agent. Evaluate memory architectures. Deploy the best one."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "trafilatura>=1.9",
    "arxiv>=2.1",
    "openai>=1.0",
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
membrane = "membrane.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["membrane"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
